# nixicle

./: .devenv.flake.nix  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .nixd.json  .pre-commit-config.yaml  .sops.yaml  Dockerfile  Makefile  README.md  Session.vim  TODO.md  Taskfile.yml  default.nix  devenv.nix  flake-file.nix  flake.nix  index.html  install-profile  install-standalone  install.devcontainer.sh  mkdocs.yaml  pyproject.toml  renovate.json5  result  shell.nix  tmp
alacritty/: alacritty.yml  theme.yml
backups/: restic.sh
bat/: config
btop/: btop.conf  catppucin_frappe.theme
cava/: config
cli/: starship.toml
containers/: ci.nix
converters/: json2nix.py
deploy/: common.nix  default.nix
docs/: den-handover.md  den-migration.md  docker-compose.yml  index.md  neovim-wrapper-migration.md
fish/: config.fish  extra.fish  fish_plugins  fish_variables
gedit/: dracula.xml
gnome/: backup.ini  dump.sh  installs.txt  restore.sh  settings.ini
home/: flake.nix  home.nix
home-manager/: atuin.nix  default.nix  fonts.nix  gtk.nix  scripts.nix  secrets.yaml  sops.nix
install/: run.sh
keyb/: config.yml  keyb.yml
lib/: default.nix
meta/: base.yaml
modules/: defaults.nix  den.nix  flake-outputs.nix  hosts.nix  legacy.nix  secrets-delivery.nix  secrets.yaml
nixos/: auto-upgrade.nix  default.nix  fonts.nix  hardware.nix  locale.nix  nix.nix  openssh.nix  pam.nix  persistance.nix  secrets.yaml  sops.nix
nvim/: init.vim
overlays/: default.nix
pkgs/: all-ways-egpu.nix  atuin-export-fish-history.nix  catppuccin-lemmy.nix  default.nix  (+9 more)
(+1583 files in other folders)
